--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "query-string": "^4.3.2",
-    "react": "^16.0.0-alpha.6",
+    "react": "16.0.0-alpha.6",
     "react-native": "^0.43.2",
     "react-native-blur": "^2.0.0",
     "react-native-branch": "^1.1.0",
@@ -20,6 +20,7 @@
     "react-native-fbsdk": "^0.5.0",
     "react-native-fcm": "^6.1.0",
     "react-native-firebase-crash-report": "^1.2.0",
+    "react-native-google-places-autocomplete": "^1.2.12",
     "react-native-image-picker": "^0.26.2",
     "react-native-intercom": "^5.9.0",
     "react-native-keyboard-spacer": "^0.3.1",
@@ -45,7 +46,7 @@
     "babel-jest": "18.0.0",
     "babel-preset-react-native": "1.9.1",
     "jest": "18.1.0",
-    "react-test-renderer": "~15.4.0-rc.4"
+    "react-test-renderer": "16.0.0-alpha.6"
   },
   "jest": {
     "preset": "react-native"
