--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-native-intercom": "^5.9.0",
     "react-native-keyboard-spacer": "^0.3.1",
     "react-native-linear-gradient": "^2.0.0",
-    "react-native-mapbox-gl": "git+https://github.com/mapbox/react-native-mapbox-gl.git",
+    "react-native-mapbox-gl": "5.2.0",
     "react-native-orientation": "git+https://github.com/jedt/react-native-orientation.git",
     "react-native-permissions": "^0.2.7",
     "react-native-share": "^1.0.20",
@@ -35,7 +35,7 @@
     "react-native-textinput-effects": "^0.3.0",
     "react-native-vector-icons": "^4.0.0",
     "react-native-video": "^1.0.0",
-    "react-navigation": "git+https://github.com/react-community/react-navigation.git",
+    "react-navigation": "1.0.0-beta.11",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
