--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-native-firebase-crash-report": "^1.2.0",
     "react-native-google-places-autocomplete": "^1.2.12",
     "react-native-image-picker": "^0.26.2",
-    "react-native-intercom": "^5.9.0",
+    "react-native-intercom": "6.2.0",
     "react-native-keyboard-spacer": "^0.3.1",
     "react-native-linear-gradient": "^2.0.0",
     "react-native-mapbox-gl": "5.2.0",
