--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-fbsdk": "^0.5.0",
     "react-native-fcm": "^6.1.0",
     "react-native-firebase-crash-report": "^1.2.0",
+    "react-native-flip-card": "^3.4.1",
     "react-native-google-places-autocomplete": "^1.2.12",
     "react-native-image-picker": "^0.26.2",
     "react-native-intercom": "6.2.0",
