--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-branch": "^1.1.0",
     "react-native-code-push": "^2.0.1-beta",
     "react-native-communications": "^2.2.1",
+    "react-native-contacts": "^0.8.2",
     "react-native-credit-card-input": "^0.3.3",
     "react-native-fbsdk": "^0.5.0",
     "react-native-fcm": "^6.1.0",
