--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -21,5 +21,5 @@ android.useDeprecatedNdk=true
 
 MYAPP_RELEASE_STORE_FILE=cforgood-key.keystore
 MYAPP_RELEASE_KEY_ALIAS=cforgood-alias
-MYAPP_RELEASE_STORE_PASSWORD=Cfor67$*Good:;%46557878
+MYAPP_RELEASE_STORE_PASSWORD=Cfor67$*Good:;$46557878
 MYAPP_RELEASE_KEY_PASSWORD=AliasCfor$*Good2017
