--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "moment": "^2.18.1",
     "prop-types": "^15.5.10",
     "query-string": "^4.3.2",
-    "react": "^16.0.0-alpha.12",
+    "react": "16.0.0-alpha.12",
     "react-native": "^0.46.4",
     "react-native-blur": "^3.1.2",
     "react-native-branch": "^2.0.0-beta.7",
@@ -34,7 +34,7 @@
     "react-native-share": "^1.0.20",
     "react-native-slider": "^0.9.1",
     "react-native-swiper": "^1.5.4",
-    "react-native-textinput-effects": "^0.3.1",
+    "react-native-textinput-effects": "^0.4.0",
     "react-native-vector-icons": "^4.2.0",
     "react-native-video": "^1.0.0",
     "react-navigation": "^1.0.0-beta.11",
