--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-permissions": "^0.2.7",
     "react-native-share": "^1.0.20",
     "react-native-slider": "^0.9.1",
+    "react-native-spinkit": "^1.0.3",
     "react-native-swiper": "^1.5.4",
     "react-native-textinput-effects": "^0.4.0",
     "react-native-vector-icons": "^4.2.0",
