--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-fcm": "^6.2.3",
     "react-native-firebase-crash-report": "^1.2.0",
     "react-native-flip-card": "^3.4.1",
+    "react-native-google-location": "^0.2.0",
     "react-native-image-picker": "^0.26.3",
     "react-native-intercom": "^6.3.0",
     "react-native-keyboard-spacer": "^0.3.1",
