--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "react-native-fbsdk": "^0.6.1",
     "react-native-fcm": "^6.2.3",
     "react-native-firebase-crash-report": "^1.2.0",
-    "react-native-flip-card": "^3.4.1",
     "react-native-google-location": "^0.2.0",
     "react-native-image-picker": "^0.26.3",
     "react-native-intercom": "^6.3.0",
@@ -34,6 +33,7 @@
     "react-native-permissions": "^0.2.7",
     "react-native-share": "^1.0.20",
     "react-native-slider": "^0.9.1",
+    "react-native-snap-carousel": "^3.3.4",
     "react-native-spinkit": "^1.0.3",
     "react-native-swiper": "^1.5.4",
     "react-native-textinput-effects": "^0.4.0",
