--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "query-string": "^4.3.2",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.46.4",
+    "react-native-android-location-services-dialog-box": "^2.7.0",
     "react-native-blur": "^3.1.2",
     "react-native-branch": "^2.0.0-beta.7",
     "react-native-code-push": "^4.1.0-beta",
